<resources>
    <string name="app_name" translatable="false">Own</string>
    <string name="app_name_long" translatable="false">Own for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="use_system_theme">Use system theme</string>
    <string name="use_system_theme_summary">Use system Monet colors (Android 12+)</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="quick_enable">Enable</string>
    <string name="quick_disable">Disable</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">Sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="layout">Layout</string>
    <string name="layout_single_column">Single column</string>
    <string name="layout_double_column">Double column</string>
    <string name="sort_and_layout">Sort and Appearance</string>
    <string name="card_style">Card</string>
    <string name="card_style_classic">Classic</string>
    <string name="card_style_stroke">Stroke</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated">%s: Updated %d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="service_mode">Service Mode</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="disable_mixed_inbound">Disable Mixed Inbound</string>
    <string name="disable_mixed_inbound_sum">Pure TUN inbound; do not listen on the local proxy port</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="dns_hosts_dialog_message">One per line. Lines starting with # are comments. Example:\nexample.com 1.1.1.1\nwww.example.com 1.1.1.1 1.1.1.2</string>
    <string name="connection_test_url">Latency test URL</string>
    <string name="speed_test_mode">Speed test mode</string>
    <string name="speed_test_timeout_ms">Speed test timeout (ms)</string>
    <string name="simple_download_url">Simple download URL</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_rules_provider">Rule Assets Provider</string>
    <string name="route_opt_bypass_lan">Bypass LAN</string>
    <string name="traffic_sniffing">Enable Traffic Sniffing</string>
    <string name="proxied_apps">Apps VPN mode</string>
    <string name="proxied_apps_summary">Configure VPN mode for selected apps</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Enable proxy on startup/app update if it was running before</string>
    <string name="settings">Settings</string>
    <string name="custom_config">Custom Config</string>
    <string name="action_export_file">Export to file</string>
    <string name="action_export_clipboard">Export to Clipboard</string>
    <string name="confirm_profile_delete">Delete profile confirmation</string>
    <string name="night_mode">Night Mode</string>
    <string name="language">Language</string>
    <string name="standard">Standard</string>
    <string name="always_show_address">Always Show Address</string>
    <string name="always_show_address_sum">Always display the server address on the configuration
        card</string>
    <string name="mixed_auth_config">Configure authentication</string>
    <string name="http_proxy_bypass">HTTP proxy bypass list</string>
    <string name="http_proxy_bypass_dialog_message">One per line. Lines starting with # are comments. Example: *zhihu.com</string>
    <string name="strict_route">Strict Route</string>
    <string name="default_subscription_user_agent">Default Subscription User-Agent</string>
    <string name="profile_traffic_statistics">Profile Traffic Statistics</string>
    <string name="profile_traffic_statistics_summary">When disabled, the used traffic will not be
        counted</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_log">Logs</string>
    <string name="tun_implementation">TUN Implementation</string>
    <string name="resolve_destination">Resolve Destination</string>
    <string name="resolve_destination_summary">If the destination address is a domain, it is then
        passed out based on the IPv6 strategy (conflicts with FakeDNS)</string>
    <string name="mtu" translatable="false">MTU</string>
    <string name="acquire_wake_lock">Acquire WakeLock</string>
    <string name="acquire_wake_lock_summary">Keep the CPU on</string>
    <string name="hide_from_recent_apps">Hide from recent tasks</string>
    <string name="hide_from_recent_apps_summary">Hide the app from recent tasks when running in background</string>
    <string name="rules_geosite_url">geosite URL</string>
    <string name="rules_geoip_url">geoip URL</string>
    <string name="hide_unavailable_profiles">Hide unavailable profiles</string>
    <string name="hide_unavailable_profiles_sum">Automatically soft-hide profiles that failed connection test; restore when re-tested reachable</string>
    <string name="app_tls_version">Subscription Min TLS Version</string>
    <string name="domain_strategy_for_remote">Domain strategy for Remote</string>
    <string name="domain_strategy_for_direct">Domain strategy for Direct</string>
    <string name="domain_strategy_for_server">Domain strategy for Server address</string>
    <string name="show_bottom_bar">Show bottom bar like SagerNet</string>
    <string name="enable_clash_api">Enable Clash API</string>
    <string name="log_level">Log Level</string>
    <string name="enable_clash_api_summary">Provide clash api and yacd dashboard at 127.0.0.1:9090</string>
    <string name="bypass_lan_in_core">Bypass LAN in Core</string>
    <string name="show_group_in_notification">Show group name in notification</string>
    <string name="allow_insecure_on_request_sum">Disable certificate checking when updating
        subscriptions</string>
    <string name="global_allow_insecure">Always allow insecure</string>
    <string name="fragment_settings">Fragment Settings</string>
    <string name="enable_tls_fragment">Enable TLS Client Hello Fragment</string>
    <string name="fragment_length">Fragment Length (min-max)</string>
    <string name="fragment_interval">Fragment Interval (min-max)</string>
    <string name="network_change_reset_connections">Reset outbound connections when network changes</string>
    <string name="wake_reset_connections">Reset outbound connections when device wake from sleep</string>
    <string name="ruleset_update_interval">RuleSet Update Interval</string>
    <string name="ruleset_update_interval_summary">Time between updates of remote RuleSets. Examples: 1h, 30m, 3600s. Set to 0 to disable automatic updates</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_summary">Clear application cache files to fix some abnormal issues</string>
    <string name="dual_network_acceleration">Dual Network Acceleration</string>
    <string name="dual_network_acceleration_summary">Connect concurrently via Wi-Fi and mobile data. Requires both Wi-Fi and mobile data to stay enabled in system settings, and increases battery usage.</string>
    <string name="reset_settings">Restore default settings</string>
    <string name="action_test_profile_speed">Test Node Speed</string>
    <string name="action_qr_code">QR Code</string>
    <string name="action_export_clipboard_menu">Export to Clipboard</string>
    <string name="format_snlink_upper">SNLINK</string>
    <string name="format_snlink_lower">snlink</string>
    <string name="concurrent_dial">Concurrent Dial (Happy Eyeballs)</string>
    <string name="concurrent_dial_summary">Enable concurrent connection establishment for faster networking</string>
    <string name="strict_route_sum">Prevent traffic from bypassing TUN, blocking leaks if connection drops</string>
    <string name="ui_settings">User Interface Settings</string>
    <string name="vpn_settings">VPN Settings</string>
    <string name="core_settings">Core Settings</string>
    <string name="mode_and_inbound_settings">Mode &amp; Inbound Settings</string>
    <string name="dns_settings">DNS Settings</string>
    <string name="observatory_settings">Observatory Settings</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="change_icon">Change icon</string>
    <string name="network_tools">Network Tools</string>
    <string name="tool_ip_purity">IP Purity Check</string>
    <string name="tool_media_unlock">Streaming Unlock</string>
    <string name="tool_connectivity_test">Connectivity Test</string>
    <string name="menu_community">Telegram Channel</string>
    <string name="show_landing_ip">Show Landing IP</string>
    <string name="show_landing_ip_sum">Display the egress landing IP and country flag on the home status bar</string>
    <string name="show_subscription_info_card">Subscription Asset Info Card</string>
    <string name="show_subscription_info_card_summary">Display subscription traffic and expiry card at top of subscription groups</string>
    <string name="menu_documentation">Documentation</string>
</resources>