<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 1. 用户界面设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryUI"
        app:title="@string/ui_settings">

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/card_style_entries"
            app:entryValues="@array/card_style_values"
            app:icon="@drawable/ic_baseline_view_list_24"
            app:key="profileCardStyle"
            app:title="@string/card_style"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="showDirectSpeed"
            app:summary="@string/show_direct_speed_sum"
            app:title="@string/show_direct_speed"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="profileTrafficStatistics"
            app:summary="@string/profile_traffic_statistics_summary"
            app:title="@string/profile_traffic_statistics" />

        <SwitchPreference
            app:key="showGroupInNotification"
            app:title="@string/show_group_in_notification" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/baseline_public_24"
            app:key="showLandingIp"
            app:summary="@string/show_landing_ip_sum"
            app:title="@string/show_landing_ip"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_center_focus_weak_24"
            app:key="alwaysShowAddress"
            app:summary="@string/always_show_address_sum"
            app:title="@string/always_show_address" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="confirmProfileDelete"
            app:title="@string/confirm_profile_delete" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_file_cloud_queue"
            app:key="show_subscription_info_card"
            app:summary="@string/show_subscription_info_card_summary"
            app:title="@string/show_subscription_info_card" />

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="useSystemTheme"
            app:summary="@string/use_system_theme_summary"
            app:title="@string/use_system_theme" />

        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:icon="@drawable/baseline_translate_24"
            app:key="appLanguage"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_baseline_app_shortcut_24"
            app:key="changeIcon"
            app:title="@string/change_icon" />

        <SwitchPreference
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 2. VPN 设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryVPN"
        app:title="@string/vpn_settings">

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />

        <SwitchPreference
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />

        <SwitchPreference
            app:key="bypassLanInCore"
            app:title="@string/bypass_lan_in_core" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_security_24"
            app:key="strictRoute"
            app:summary="@string/strict_route_sum"
            app:title="@string/strict_route" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_nat_24"
            app:key="allowAccess"
            app:summary="@string/allow_access_sum"
            app:title="@string/allow_access" />

        <SwitchPreference
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/tun_implementation"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="tunImplementation"
            app:title="@string/tun_implementation"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.MTUPreference
            app:defaultValue="9000"
            app:entries="@array/mtu_select"
            app:entryValues="@array/mtu_select"
            app:icon="@drawable/baseline_public_24"
            app:key="mtu"
            app:title="@string/mtu" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 3. 模式与入站设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryMode"
        app:title="@string/mode_and_inbound_settings">

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_block_24"
            app:key="disableMixedInbound"
            app:summary="@string/disable_mixed_inbound_sum"
            app:title="@string/disable_mixed_inbound" />

        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="mixedPort"
            app:title="@string/port_proxy"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_baseline_lock_24"
            app:key="mixedAuthConfig"
            app:title="@string/mixed_auth_config" />

        <EditTextPreference
            app:defaultValue=""
            app:dialogMessage="@string/http_proxy_bypass_dialog_message"
            app:icon="@drawable/ic_baseline_domain_24"
            app:key="httpProxyBypass"
            app:title="@string/http_proxy_bypass"
            app:useSimpleSummaryProvider="true" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 4. 核心设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryCore"
        app:title="@string/core_settings">

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1"
            app:entries="@array/traffic_sniffing_values"
            app:entryValues="@array/int_array_2"
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:key="trafficSniffing"
            app:title="@string/traffic_sniffing"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="resolveDestination"
            app:summary="@string/resolve_destination_summary"
            app:title="@string/resolve_destination" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="dualNetworkAcceleration"
            app:summary="@string/dual_network_acceleration_summary"
            app:title="@string/dual_network_acceleration" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="concurrentDial"
            app:summary="@string/concurrent_dial_summary"
            app:title="@string/concurrent_dial" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/rules_dat_provider"
            app:entryValues="@array/int_array_5"
            app:icon="@drawable/ic_baseline_rule_folder_24"
            app:key="rulesProvider"
            app:title="@string/route_rules_provider"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="https://github.com/SagerNet/sing-geosite/releases/latest/download/geosite.db"
            app:key="rulesGeositeUrl"
            app:title="@string/rules_geosite_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="https://github.com/SagerNet/sing-geoip/releases/latest/download/geoip.db"
            app:key="rulesGeoipUrl"
            app:title="@string/rules_geoip_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="rulesUpdateInterval"
            app:summary="@string/ruleset_update_interval_summary"
            app:title="@string/ruleset_update_interval" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 5. DNS 设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryDNS"
        app:title="@string/dns_settings">

        <EditTextPreference
            app:defaultValue="https://dns.google/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_remote"
            app:title="@string/domain_strategy_for_remote"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="https://223.5.5.5/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_direct"
            app:title="@string/domain_strategy_for_direct"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_server"
            app:title="@string/domain_strategy_for_server"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_camera_24"
            app:key="enableDnsRouting"
            app:summary="@string/dns_routing_message"
            app:title="@string/enable_dns_routing" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_action_lock"
            app:key="enableFakeDns"
            app:summary="@string/fakedns_message"
            app:title="@string/enable_fakedns" />

        <EditTextPreference
            app:defaultValue=""
            app:dialogMessage="@string/dns_hosts_dialog_message"
            app:icon="@drawable/ic_baseline_transform_24"
            app:key="dnsHosts"
            app:title="@string/dns_hosts"
            app:useSimpleSummaryProvider="true" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 6. 分片 (Fragment) 设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryFragment"
        app:title="@string/fragment_settings">

        <SwitchPreference
            app:key="enableTLSFragment"
            app:title="@string/enable_tls_fragment" />

        <EditTextPreference
            app:defaultValue="100-200"
            app:key="fragmentLength"
            app:title="@string/fragment_length"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="10-20"
            app:key="fragmentInterval"
            app:title="@string/fragment_interval"
            app:useSimpleSummaryProvider="true" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 7. 连接观测设置 (Observatory) -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryObservatory"
        app:title="@string/observatory_settings">

        <moe.matsuri.nb4a.ui.UrlTestPreference
            app:defaultValue="@string/default_connection_test_url"
            app:icon="@drawable/ic_baseline_cast_connected_24"
            app:key="connectionTestURL"
            app:title="@string/connection_test_url"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_filter_list_24"
            app:key="hideUnavailableProfiles"
            app:summary="@string/hide_unavailable_profiles_sum"
            app:title="@string/hide_unavailable_profiles" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="@string/default_speed_test_mode"
            app:entries="@array/speed_test_modes"
            app:entryValues="@array/speed_test_mode_values"
            app:key="speedTestMode"
            app:title="@string/speed_test_mode"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/default_speed_test_timeout_ms"
            app:key="speedTestTimeoutMs"
            app:title="@string/speed_test_timeout_ms"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/default_simple_download_url"
            app:key="simpleDownloadURL"
            app:title="@string/simple_download_url"
            app:useSimpleSummaryProvider="true" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

    <!-- 8. 进阶设置 -->
    <moe.matsuri.nb4a.ui.ExpandablePreferenceCategory
        app:key="categoryAdvanced"
        app:title="@string/advanced_settings">

        <io.nekohasekai.sagernet.widget.SubscriptionUserAgentPreference
            app:icon="@drawable/ic_baseline_http_24"
            app:key="defaultSubscriptionUserAgent"
            app:title="@string/default_subscription_user_agent" />

        <SwitchPreference
            app:icon="@drawable/baseline_construction_24"
            app:key="enableClashAPI"
            app:summary="@string/enable_clash_api_summary"
            app:title="@string/enable_clash_api" />

        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/ic_action_lock_open"
            app:key="globalAllowInsecure"
            app:title="@string/global_allow_insecure" />

        <SwitchPreference
            app:key="allowInsecureOnRequest"
            app:title="@string/allow_insecure_on_request_sum" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1.2"
            app:entries="@array/app_tls_version"
            app:entryValues="@array/app_tls_version"
            app:key="appTLSVersion"
            app:title="@string/app_tls_version"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/baseline_developer_board_24"
            app:key="acquireWakeLock"
            app:summary="@string/acquire_wake_lock_summary"
            app:title="@string/acquire_wake_lock" />

        <SwitchPreference
            app:key="hideFromRecentApps"
            app:summary="@string/hide_from_recent_apps_summary"
            app:title="@string/hide_from_recent_apps" />

        <moe.matsuri.nb4a.ui.LongClickListPreference
            app:defaultValue="0"
            app:entries="@array/log_level"
            app:entryValues="@array/int_array_5"
            app:icon="@drawable/ic_baseline_bug_report_24"
            app:key="logLevel"
            app:title="@string/log_level"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.EditConfigPreference
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="globalCustomConfig"
            app:title="@string/custom_config"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_baseline_delete_24"
            app:key="clearCache"
            app:summary="@string/clear_cache_summary"
            app:title="@string/clear_cache" />

        <Preference
            app:icon="@drawable/baseline_undo_24"
            app:key="resetSettings"
            app:title="@string/reset_settings" />

    </moe.matsuri.nb4a.ui.ExpandablePreferenceCategory>

</PreferenceScreen>
