<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configuration"
            android:icon="@drawable/ic_nav_configuration_selector"
            android:title="@string/menu_configuration" />

        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/menu_group" />

        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_maps_directions"
            android:title="@string/menu_route" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/network_tools">
        <menu>
            <item
                android:id="@+id/nav_ip_purity"
                android:icon="@drawable/ic_tool_ip_purity"
                android:title="@string/tool_ip_purity" />
            <item
                android:id="@+id/nav_media_unlock"
                android:icon="@drawable/ic_tool_media_unlock"
                android:title="@string/tool_media_unlock" />
            <item
                android:id="@+id/nav_connectivity_test"
                android:icon="@drawable/ic_tool_connectivity"
                android:title="@string/tool_connectivity_test" />
            <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/menu_dashboard" />
        </menu>
    </item>

    <group
        android:id="@+id/misc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logcat"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:title="@string/menu_log" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/baseline_construction_24"
            android:title="@string/menu_tools" />
    </group>

    <group
        android:id="@+id/about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/baseline_send_24"
            android:title="@string/menu_community" />
        <item
            android:id="@+id/nav_docs"
            android:icon="@drawable/ic_baseline_import_contacts_24"
            android:title="@string/menu_documentation" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>

</menu>